fdo#57203 Unknown option: -Embedding

Ignore this option on Windows.
This work-arounds a regression introduced by f4a4ba9ac
Windows appends -Embedding when LibreOffice is called by COM+
Before f4a4ba9ac this option was silently ignored.

Change-Id: I8a727895c9ec8fa4b06aea8ad66b2791ada66dd5
Reviewed-on: https://gerrit.libreoffice.org/1514
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 3616640054f4fc18c6e7307ba17e7d89a0f5ae69)

Conflicts:
	desktop/source/app/cmdlineargs.cxx
(cherry picked from commit abf0ed8400d7787fec906b21de74698936d40e28)

Signed-off-by: Michael Stahl <mstahl@redhat.com>